--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,43 +1,43 @@
 ---
-- name: Fetch config.xml from remote host
+- name: Fetch config.xml From Remote Host
   changed_when: false
   ansible.builtin.fetch:
     src: "{{ config_file }}"
     dest: "{{ local_file }}"
     flat: true
-  
-- name: Get config file stats
+
+- name: Get Config File Stats
   delegate_to: localhost
   ansible.builtin.stat:
     path: "{{ local_file }}"
   register: __old_file
 
-- name: Edit the config file
+- name: Edit the Config File
   delegate_to: localhost
   ansible.builtin.import_tasks: config.yml
 
-- name: Get config file stats
+- name: Get Config File Stats
   delegate_to: localhost
   ansible.builtin.stat:
     path: "{{ local_file }}"
   register: __new_file
 
-- name: Upload modified config to remote host
+- name: Upload Modified config.xml to the Remote Host
   notify: Reboot
   when: __old_file.stat.checksum != __new_file.stat.checksum
   block:
-    - name: Back up current config.xml on remote host
+    - name: Back up Current config.xml on the Remote Host
       ansible.builtin.copy:
         src: "{{ config_file }}"
         dest: "{{ config_file }}-{{ ansible_date_time.iso8601_basic_short }}.bak"
         remote_src: true
 
-    - name: Upload modified config.xml to remote host
+    - name: Upload Modified config.xml to the Remote Host
       ansible.builtin.copy:
         src: "{{ local_file }}"
         dest: "{{ config_file }}"
 
-- name: Remove temp file from localhost
+- name: Remove config.xml File From Localhost
   changed_when: false
   delegate_to: localhost
   ansible.builtin.file:
