--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,45 @@
 ---
-# tasks file for template
+- name: Fetch config.xml From Remote Host
+  changed_when: false
+  ansible.builtin.fetch:
+    src: "{{ config_file }}"
+    dest: "{{ local_file }}"
+    flat: true
+
+- name: Get Config File Stats
+  delegate_to: localhost
+  ansible.builtin.stat:
+    path: "{{ local_file }}"
+  register: __old_file
+
+- name: Edit the Config File
+  delegate_to: localhost
+  ansible.builtin.import_tasks: config.yml
+
+- name: Get Config File Stats
+  delegate_to: localhost
+  ansible.builtin.stat:
+    path: "{{ local_file }}"
+  register: __new_file
+
+- name: Upload Modified config.xml to the Remote Host
+  notify: Reboot
+  when: __old_file.stat.checksum != __new_file.stat.checksum
+  block:
+    - name: Back up Current config.xml on the Remote Host
+      ansible.builtin.copy:
+        src: "{{ config_file }}"
+        dest: "{{ config_file }}-{{ ansible_date_time.iso8601_basic_short }}.bak"
+        remote_src: true
+
+    - name: Upload Modified config.xml to the Remote Host
+      ansible.builtin.copy:
+        src: "{{ local_file }}"
+        dest: "{{ config_file }}"
+
+- name: Remove config.xml File From Localhost
+  changed_when: false
+  delegate_to: localhost
+  ansible.builtin.file:
+    path: "{{ local_file }}"
+    state: absent
